# GamerDistributionThesis2020

./: .gitignore  LICENSE  README.md  pyproject.toml  subreddits.txt  thesis.bib  thesis_draft.tex
data/: info.md
joshnettools/: gamenetattrs.py  gamenetloader.py  gamersdraw.py  main.py  projections.py  pvalueplots.py  randomnet.py  subcolors.py
src/pyport/: gamenetattrs.py  gamenetloader.py  gamersdraw.py  main.py  projections.py  pvalueplots.py  randomnet.py  subcolors.py
