[tool.poetry]
name = "joshnettools"
version = "0.10.0"
description = "NetworkX wrappers for my social network analysis thesis."
keywords = ["data science", "networkx", "reddit", "social network", "graph"]
authors = ["Joshua Megnauth <joshua.megnauth@dontemailme.com>"]
homepage = ""
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/joshuamegnauth54/GamerDistributionThesis2020"
packages = [{include = "joshnettools"]

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^10.0.0"
pydot = "^1.4.2"
pandas = "^1.5.1"
networkx = "^2.8.8"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"

[tool.mypy]
allow_redefinition = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
